[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "wintertools"
author = "Alethea Katherine Flowers"
author-email = "thea@winterbloom.com"
home-page = "https://github.com/theacodes/wintertools"
classifiers = ["License :: OSI Approved :: MIT License"]

