[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "wintertools"
author = "Alethea Katherine Flowers"
author-email = "thea@winterbloom.com"
home-page = "https://github.com/theacodes/wintertools"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "requests >= 2.25.0",
    "pyserial >= 3.5",
    "python-rtmidi >= 1.4.9",
    "pyvisa >= 1.11.0",
    "rich >= 12.0.0",
    "readchar >= 2.0.1",
    "structy_generator",
    "structy",
]
